--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server/index.js",
   "type": "module",
   "scripts": {
-    "start": "node server/index.js",
+    "start": "node server/index.js && cd client && npm run dev",
     "dev": "nodemon server/index.js",
     "client": "cd client && npm run dev",
     "build": "cd client && npm run build",
